# brave-core

./: DEPS  brave_paks.gni  package-lock.json  package.json
app/: brave_main_delegate.cc
browser/: BUILD.gn  brave_browser_process_impl.cc  brave_profile_prefs.cc  brave_tab_helpers.cc
browser/extensions/: brave_component_loader.cc  brave_component_loader.h
browser/importer/: brave_external_process_importer_client.cc  brave_external_process_importer_client.h  brave_in_process_importer_bridge.cc  brave_in_process_importer_bridge.h  brave_profile_writer.cc  brave_profile_writer.h
browser/net/: brave_network_delegate_base.cc  brave_static_redirect_network_delegate_helper.cc
browser/resources/: resource_ids
browser/search_engines/: guest_window_search_engine_provider_service.cc  (+5 more)
common/: BUILD.gn
components/brave_welcome_ui/: BUILD.gn  brave_welcome.html
components/brave_welcome_ui/components/: app.tsx
components/brave_welcome_ui/components/screens/: footerBox.tsx  importBox.tsx  rewardsBox.tsx  searchBox.tsx  shieldsBox.tsx  themeBox.tsx  welcomeBox.tsx
patches/: chrome-browser-about_flags.cc.patch  chrome-browser-importer-external_process_importer_client.h.patch  chrome-browser-ui-views-location_bar-location_bar_view.h.patch  chrome-common-importer-importer_bridge.h.patch  chrome-common-importer-profile_import.mojom.patch  chrome-common-importer-profile_import.typemap.patch  chrome-common-importer-profile_import_process_param_traits_macros.h.patch  third_party-blink-renderer-core-layout-intersection_geometry.cc.patch
test/: BUILD.gn
(+36 files in other folders)
