import("//brave/components/common/typescript.gni")

transpile_web_ui("brave_welcome_ui") {
  inputs = [
    "brave_welcome.html",
    "brave_welcome.tsx",
    "storage.ts",
    "store.ts",
    "actions/welcome_actions.ts",
    "components/app.tsx",
    "components/screens/footerBox.tsx",
    "components/screens/importBox.tsx",
    "components/screens/rewardsBox.tsx",
    "components/screens/searchBox.tsx",
    "components/screens/shieldsBox.tsx",
    "components/screens/welcomeBox.tsx",
    "constants/theme.ts",
    "constants/welcome_types.ts",
    "reducers/index.ts",
    "reducers/welcome_reducer.ts",
  ]

  bundle_names = ["brave_welcome.bundle.js"]
}
